# agorusta

./: .gitignore  CLAUDE.md  README.md  project_design.md  template.yaml
backend/: Cargo.toml
backend/lambdas/api/: Cargo.toml
backend/lambdas/api/src/: auth.rs  dms.rs  invites.rs  main.rs  messages.rs  servers.rs
backend/lambdas/websocket/: Cargo.toml
backend/lambdas/websocket/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: error.rs  lib.rs  models.rs
frontend/: .env.example  package-lock.json
frontend/src/: app.css
frontend/src/lib/: api.ts  auth.svelte.ts  websocket.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/app/: +layout.svelte  +page.svelte
frontend/src/routes/app/[serverId]/: +layout.svelte  +page.svelte
frontend/src/routes/app/[serverId]/[channelId]/: +page.svelte
frontend/src/routes/app/[serverId]/settings/: +page.svelte
frontend/src/routes/app/dms/: +layout.svelte  +page.svelte
frontend/src/routes/app/dms/[conversationId]/: +page.svelte
