[package]
name = "websocket"
version.workspace = true
edition.workspace = true

[[bin]]
name = "websocket"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-apigatewaymanagement = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
